--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,27 @@
-version: 2.1
-
-orbs:
-  python: circleci/python@0.2.1
-
+version: 2
 jobs:
-  build-and-test:
-    executor: python/default
+  build:
+    docker:
+      - image: circleci/python:3.6.3
     steps:
       - checkout
-      - python/load-cache
-      - python/install-deps
-      - python/save-cache
       - run:
-          command: py.test -v .
-          name: Test
-
-workflows:
-  main:
-    jobs:
-      - build-and-test
+          name: install dependencies
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install pytest
+            pip install pytest-cov
+            pip install -e ./.
+      - run:
+          name: run test
+          command: |
+            . venv/bin/activate
+            pytest --junitxml=test-reports/junit.xml
+      - store-test-results:
+          path: test-reports
+      - run:
+          name: run test-cov
+          command: |
+            . venv/bin/activate
+            pytest --cov=src
