--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 pymongo
 dnspython
 google-api-python-client
-uvicorn
+uvicorn=20.0.4
 fastapi
 pytest
 python-decouple
-gunicorn
-uviloop
-httptools
+gunicorn=0.11.2
