--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,39 @@
-pymongo
-dnspython
-google-api-python-client
-uvicorn==20.0.4
-fastapi
-pytest
-python-decouple
-gunicorn==0.11.2
+attrs==20.3.0
+cachetools==4.2.1
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+dnspython==2.1.0
+fastapi==0.63.0
+google-api-core==1.26.0
+google-api-python-client==1.12.8
+google-auth==1.27.0
+google-auth-httplib2==0.0.4
+googleapis-common-protos==1.52.0
+gunicorn==20.0.4
+h11==0.12.0
+httplib2==0.19.0
+httptools==0.1.1
+idna==2.10
+iniconfig==1.1.1
+packaging==20.9
+pluggy==0.13.1
+protobuf==3.15.1
+py==1.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pydantic==1.7.3
+pymongo==3.11.3
+pyparsing==2.4.7
+pytest==6.2.2
+python-decouple==3.4
+pytz==2021.1
+requests==2.25.1
+rsa==4.7.1
+six==1.15.0
+starlette==0.13.6
+toml==0.10.2
+uritemplate==3.0.1
+urllib3==1.26.3
+uvicorn==0.13.4
+uvloop==0.15.2
